Atualizei EX022 de novo

--- a/EXERCICIOS/EX022/fundo006.html
+++ b/EXERCICIOS/EX022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
 
         }
@@ -33,6 +33,20 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis at doloremque, quis assumenda dolores officiis perspiciatis sequi soluta qui commodi fuga esse aspernatur blanditiis debitis sint dignissimos voluptatibus temporibus illum?</p>
+
     </main>
 
 </body>
