--- a/EXERCICIOS/teste01/teste01.html
+++ b/EXERCICIOS/teste01/teste01.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title> 
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<title>Calculadora</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-    <form>
-
-  <label for="name">Nome:</label>
-  <input type="text" id="name" name="name" required>
-
-  <label for="email">E-mail:</label>
-  <input type="email" id="email" name="email" required>
-
-  <label for="message">Mensagem:</label>
-  <textarea id="message" name="message" required></textarea>
-
-  <input type="submit" value="Enviar">
-
-</form>
-
+	<div class="calculator">
+		<div class="display">0</div>
+		<div class="button-row">
+			<button class="button gray" onclick="clearDisplay()">C</button>
+			<button class="button gray" onclick="backspace()">&#8592;</button>
+			<button class="button gray">%</button>
+			<button class="button orange">/</button>
+		</div>
+		<div class="button-row">
+			<button class="button black" onclick="addToDisplay(7)">7</button>
+			<button class="button black" onclick="addToDisplay(8)">8</button>
+			<button class="button black" onclick="addToDisplay(9)">9</button>
+			<button class="button orange" onclick="addToDisplay('*')">*</button>
+		</div>
+		<div class="button-row">
+			<button class="button black" onclick="addToDisplay(4)">4</button>
+			<button class="button black" onclick="addToDisplay(5)">5</button>
+			<button class="button black" onclick="addToDisplay(6)">6</button>
+			<button class="button orange" onclick="addToDisplay('-')">-</button>
+		</div>
+		<div class="button-row">
+			<button class="button black" onclick="addToDisplay(1)">1</button>
+			<button class="button black" onclick="addToDisplay(2)">2</button>
+			<button class="button black" onclick="addToDisplay(3)">3</button>
+			<button class="button orange" onclick="addToDisplay('+')">+</button>
+		</div>
+		<div class="button-row">
+			<button class="button black wide" onclick="addToDisplay(0)">0</button>
+			<button class="button black">.</button>
+			<button class="button orange" onclick="calculate()">=</button>
+		</div>
+	</div>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
